<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_accessibility">
        <SwitchPreferenceCompat
            app:key="pref_high_contrast"
            app:title="@string/pref_high_contrast_title"
            app:summary="@string/pref_high_contrast_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="pref_call_announcer"
            app:title="@string/pref_call_announcer_title"
            app:summary="@string/pref_call_announcer_summary"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_answer_end">
        <SwitchPreferenceCompat
            app:key="pref_volume_answer"
            app:title="@string/pref_volume_answer_title"
            app:summary="@string/pref_volume_answer_summary"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="pref_power_end_call"
            app:title="@string/pref_power_end_title"
            app:summary="@string/pref_power_end_summary"
            app:defaultValue="false" />
        <ListPreference
            app:key="pref_answer_mode"
            app:title="@string/pref_answer_mode_title"
            app:summary="@string/pref_answer_mode_summary"
            app:entries="@array/answer_mode_entries"
            app:entryValues="@array/answer_mode_values"
            app:defaultValue="touch"
            app:useSimpleSummaryProvider="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_calls">
        <Preference
            app:key="pref_default_dialer"
            app:title="@string/pref_default_dialer_title"
            app:summary="@string/pref_default_dialer_summary" />
        <SwitchPreferenceCompat
            app:key="pref_spam_filter"
            app:title="@string/pref_spam_filter_title"
            app:summary="@string/pref_spam_filter_summary"
            app:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
